--- a/bin/embed_gw2timer.html
+++ b/bin/embed_gw2timer.html
@@ -6,7 +6,7 @@
 <body>
 
 	<h2>Example 1</h2>
-	<iframe src="http://gw2timer.com/?int_setClock=2" width="377" height="85" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe>
+	<iframe src="http://gw2timer.com/?int_setClock=2" width="360" height="85" seamless="seamless" scrolling="no" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe>
 	<br />
 	<br />
 
