--- a/helpsrc.html
+++ b/helpsrc.html
@@ -4,7 +4,7 @@
 
 <header id="headerHelp_FAQ" class="jsSection"><img src="img/ui/faq.png" alt="FAQ" />FAQ</header>
 <section>
-<p>Overview of <a href="http://i.imgur.com/KvJEr58.png">GW2Timer.com features</a>.</p>
+<p>Overview of <a href="http://forum.renaka.com/topic/5602037/">GW2Timer.com features</a>.</p>
 <h2>What do the colors in the clock mean?</h2>
 <p>As you may know, world boss (WB) chains start exactly 15 minutes apart (X:00, X:15, X:30, X:45), and most of them don't take longer than 15 minutes to complete, so the chains can be neatly fitted into a clock's quadrants. The <strong>bright green</strong> mark is the current WB's start (<strong>dark green</strong> is the next), the <strong>orange</strong> mark is the minimum time it is completed (usually by a full map population), and the <strong>red</strong> mark is the average. If you waypoint to a WB after the red mark is passed, it's likely the boss is already dead, and you'll be placed in a newer map instance with the chain still in the early events. Chains have a 15-20 minutes time limit to start the boss, so you can still make it, but you may miss the next boss because of the 15 minute per boss timeframe overlap.</p>
 
@@ -70,11 +70,9 @@
 <a href="http://argos-soft.net/GW2">Argos Soft</a> - useful event map<br />
 <a href="http://divinitysreach.com">Divinity's Reach</a> - comprehensive map completioner<br />
 <a href="http://virtus-gilde.de/gw2map">gw2map</a> - path maker and viewer<br />
-<a href="http://howar31.github.io/GW2Timer/">howar31</a> - clean schedule timer
+<a href="http://howar31.github.io/GW2Timer/">howar31</a> - clean schedule timer<br />
+<a href="http://tpcalc.com/">tpcalc</a> - simple TP calculator
 </p>
-
-<h2>ArenaNet Copyright</h2>
-<p>&#169; 2012 ArenaNet, Inc. All rights reserved. NCsoft, the interlocking NC logo, ArenaNet, Arena.net, Guild Wars, Guild Wars Factions, Factions, Guild Wars Nightfall, Nightfall, Guild Wars: Eye of the North, Eye of the North, Guild Wars 2, and all associated logos and designs are trademarks or registered trademarks of NCsoft Corporation. All other trademarks are the property of their respective owners.</p>
 
 </section>
 
@@ -85,8 +83,8 @@
 	
 <h1>Embed GW2Timer.com</h1>
 <p>All of this website can be integrated into your own site! Here is a <a href="http://forum.renaka.com/topic/5547304/">preview of the example's results</a>. The following example code will display the clock pane in Bar style.</p>
-<textarea class="jsCopyCode" cols="35" rows="6"><iframe src="http://gw2timer.com/?int_setClock=2" width="377" height="85" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe></textarea>
-<p>Change the height attribute as you please, but the width for the panel is fixed, so making it thinner will show a horizontal scrollbar, and making it wider will show the map pane. The rest of the style is up to you.</p>
+<textarea class="jsCopyCode" cols="35" rows="6"><iframe src="http://gw2timer.com/?int_setClock=2" width="360" height="85" scrolling="no" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe></textarea>
+<p>Change the height attribute as you please, but the width for the panel is fixed to 360 pixels plus the vertical scrollbar's height (default 17 pixels) if you don't put <code>scrolling=&quot;no&quot;</code>. The rest of the style is up to you.</p>
 <p>Additionally, you can include commands in the URL so the embedded site executes any of the Options page's settings (this does not override the user's stored settings). Find more <a href="https://en.wikipedia.org/wiki/Query_string">query string</a> commands by clicking &quot;Print Website Memory&quot; on the Options page under Debug.</p>
 <p>Example iframe src:<br />
 http://gw2timer.com/?int_setClock=#<br />
@@ -94,7 +92,7 @@ http://gw2timer.com/?int_setClock=#<br />
 # = 1 = Full<br />
 # = 2 = Bar<br />
 # = 3 = No Clock</p>
-<p>Here is another example code to show the compact clock with Bright background.</p>
+<p>Here is another example code to show the compact clock with Bright background and a scrollbar.</p>
 <textarea class="jsCopyCode" cols="35" rows="6"><iframe src="http://gw2timer.com/?int_setClock=0&int_setDimming=1" width="377" height="220" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe></textarea>
 <p>And a code to show just the list of world bosses</p>
 <textarea class="jsCopyCode" cols="35" rows="6"><iframe src="http://gw2timer.com/?int_setClock=3&bol_expandEvents=false" width="360" height="580" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe></textarea>
@@ -174,7 +172,7 @@ http://gw2timer.com/?int_setClock=#<br />
 
 <header id="headerHelp_Temples" class="jsSection"><img src="img/chain/temple.png" alt="Temples" />Temples</header>
 <section>
-All temples drop 30 dragonite and unlock a <a href="http://wiki.guildwars2.com/wiki/Temple_armor">karma vendor</a> for 1.5-2 hours selling exotic armor and trinkets.
+All temples drop 30 dragonite and unlock a <a href="http://wiki.guildwars2.com/wiki/Temple_armor">karma vendor</a> for 1.5-2 hours selling exotic armor and trinkets. You can easily tell whether a temple chain is active by looking for a contested waypoint inside the temple.
 
 <h2>Lyssa</h2>
 <p>Usually people will capture the <ins data-coord="[13238, 23581]">Union seal</ins> first for the waypoint so they can map call for help. The northwest seal can be completed by picking up batteries from the lightning towers and giving them to the glass pod, or throwing them at the golems. The southeast seal requires protecting the cannon from waves of risens, which attack every seals, and attack them again 10 or 20-30 minutes after the seals were secured. During this timeframe the <ins data-coord="[13133, 23954]">priestess</ins> can be attacked, except for the times she uses her perma stun skill when your character is facing her (also causes more mobs to spawn). The two things to watch for is the champion gorillas which can insta down you, and the seals being attacked again, which if not quickly reclaimed after the risens had captured it, will cause the boss to fully heal. A retake event occurs 1.5-2 hours after, and you must let the risens recapture temple for the chain to instantly restart, else that retake event loops 1-1.5 hours later.</p>
