--- a/mapsrc.html
+++ b/mapsrc.html
@@ -666,15 +666,15 @@ You may need to complete the heart before you can purchase.
 
 
 <header id="headerMap_Resource" class="jsSection"><img src="img/ui/resource.png" alt="Resource Nodes" /><var
-	data-de="Ressourcen"
-	data-es="Recursos"
-	data-fr="Ressources"
-	data-cs="Zdroje"
-	data-it="Risorse"
-	data-pl="Zasobów"
-	data-pt="Recursos"
-	data-ru="Ресурсы"
-	data-zh="資源"
+	data-de="Ressourcenknoten"
+	data-es="Nodos de Recursos"
+	data-fr="Noeuds de Ressources"
+	data-cs="Uzly Zdrojů"
+	data-it="Nodi di Risorse"
+	data-pl="Węzły Zasobów"
+	data-pt="Nodos de Recursos"
+	data-ru="Ресурсные Узлы"
+	data-zh="資源節點"
 	>Resource Nodes</var>
 </header>
 <section>
@@ -814,14 +814,19 @@ A marathon of intricate jumps.
 	>Trading Calculator</var>
 </header>
 <section>
-	<samp class="jsHelpTooltip" title="Use periods (.) to separate units:<br /><br />
+<samp class="jsHelpCollapsible"></samp>
+<div>
+	<br />There are four input boxes (dark shaded) from top to bottom: <b>Name</b> of the item, <b>Buy</b> price, <b>Sell</b> price, and <b>Quantity</b> (defaults to 1 if empty). Hover over the $ labels to see their meaning. Click the buttons next to the name box to search for that item. The buy and sell boxes have a specific syntax; use periods (.) to separate units:<br />
+	<div class="cssIndent">
 	0.1 = 10<copper /><br />
 	.01 = 1<copper /><br />
 	1 = 1<silver /><br />
 	1.55 = 1<silver /> 55<copper /><br />
 	2.4.7 = 2<gold /> 4<silver /> 7<copper /><br />
-	2..6 = 2<gold /> 6<copper /><br />
-	230.6 = 2<gold /> 30<silver /> 60<copper />"></samp>
+	2..6 = 2<gold /> 0<silver /> 6<copper /><br />
+	230.6 = 2<gold /> 30<silver /> 60<copper />
+	</div>
+</div>
 	<br />
 	<div id="trdList"></div>
 </section>
