Added TP calc initial input

--- a/index.html
+++ b/index.html
@@ -380,6 +380,9 @@
 					<label title="Show/Hide the map area on the left."><input id="opt_bol_showMap" type="checkbox" /> Show the map</label>
 					<span>For map options, hover over the <img class="cntIconExample" src="img/map/display.png" alt="Icon" /> button on the top right corner of the map pane.</span><br />
 					<br />
+					<h2>Tools</h2>
+					<label title="How many calculators to show? If you pick a number lower than the current, data from the higher numbered calculators will be erased! Refresh the website to see changes."><input id="opt_int_numTradingCalculators" type="number" min="1" max="96" step="1" /> Number of TP Calculators</label>
+					<br />
 					<h2>Alarm</h2>
 					<span>Voice announcement requires Chrome, Firefox, or IE9+. Multilingualism is only available for Chrome. Click the speaker icon on the chains page to toggle sound.</span>
 					<h3>Checklist Mode</h3>
