--- a/mapsrc.html
+++ b/mapsrc.html
@@ -826,6 +826,7 @@ A marathon of intricate jumps.
 	2..6 = 2<gold /> 0<silver /> 6<copper /><br />
 	230.6 = 2<gold /> 30<silver /> 60<copper />
 	</div>
+	All input data are saved automatically. To show more calculators, go to Options page, Tools section.
 </div>
 	<br />
 	<div id="trdList"></div>
