Added TP calculator with new API

--- a/helpsrc.html
+++ b/helpsrc.html
@@ -64,13 +64,14 @@
 <h1>Credits</h1>
 <p>View this website's source for the &quot;includes&quot;. Each source file has the appropriate credits and are fully documented.</p>
 
-<h2>Shout-outs</h2>
+<h2>Influences</h2>
 <p>
 <a href="http://us.gw2stuff.com/">GW2 Stuff</a> - dependable and helpful timer<br />
 <a href="http://argos-soft.net/GW2">Argos Soft</a> - useful event map<br />
 <a href="http://divinitysreach.com">Divinity's Reach</a> - comprehensive map completioner<br />
 <a href="http://virtus-gilde.de/gw2map">gw2map</a> - path maker and viewer<br />
 <a href="http://howar31.github.io/GW2Timer/">howar31</a> - clean schedule timer<br />
+<a href="http://www.gw2spidy.com">gw2spidy</a> - Trading Post API provider<br />
 </p>
 
 </section>
