Added Nebo Rhendak, Gem

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				<div id="mapOptions">
 					<img title="<dfn>Click for Full Map</dfn>" id="mapDisplayButton" src="img/map/display.png" alt="display" />
 					<div id="mapOptionsPopup" class="cntComposition">
-						<label title="Show/Hide all icons listed below. Will increase initial site load time if enabled."><input id="opt_bol_showWorldCompletion" type="checkbox" /> Display world icons</label>
+						<label title="Show/Hide all icons listed below. Will increase initial site load time if enabled."><input id="opt_bol_showWorldCompletion" type="checkbox" /> Display world icons...</label>
 						<div id="mapOptionsDisplay">
 							<label><img src="img/map/scope.png" alt="" /><input id="opt_bol_displaySectors" type="checkbox" /> Sector Names</label>
 							<label><img src="img/map/waypoint_h.png" alt="" /><input id="opt_bol_displayWaypoints" type="checkbox" /> Waypoints</label>
@@ -395,8 +395,8 @@
 					<label><input id="opt_int_alertSubscribedSecond" type="number" min="0" max="30" step="1" /> Second Alarm</label>
 					<br />
 					<h2>Trading</h2>
-					<label title="Regularly get the current buy and sell prices. This option must be enabled for notification of desired price range to work."><input id="opt_bol_refreshPrices" type="checkbox" /> Auto-refresh prices and enable notification</label>
-					<label title="How many seconds before the program refreshes price data?"><input id="opt_int_secTradingRefresh" type="number" min="10" max="600" step="1" /> Seconds between price refreshes</label>
+					<label title="Regularly get the current buy and sell prices. This option must be enabled for notification of desired price range to work."><input id="opt_bol_refreshPrices" type="checkbox" /> Auto-refresh data and enable notification</label>
+					<label title="How many seconds before the program refreshes price and exchange data?"><input id="opt_int_secTradingRefresh" type="number" min="10" max="600" step="1" /> Seconds between refreshes</label>
 					<label title="How many calculators to show? If you pick a number lower than the current, data from the higher numbered calculators will be erased! Reload page to see changes."><input id="opt_int_numTradingCalculators" type="number" min="1" max="250" step="1" /> Number of TP Calculators</label>
 					<label title="How many items to show in the TP search result?"><input id="opt_int_numTradingResults" type="number" min="1" max="50" step="1" /> Number of TP search results</label>
 					<h2>Tools</h2>
