--- a/helpsrc.html
+++ b/helpsrc.html
@@ -45,7 +45,7 @@
 <span>Use the <a href="http://www.reddit.com/r/gw2timer/">/r/gw2timer subreddit</a> or the <a href="http://forum.renaka.com/forum/368355/">forum</a> for questions/suggestions/reports; you can post as an unregistered guest at the forum.</span>
 
 <h1>About</h1>
-<p>This web application runs entirely on the client's side, except for API calls to the GW2 server for map data. Few libraries/plugins were used to avoid bloat. It was tested on Firefox/Chrome 2013-2014 and Opera 2013, in 1024x768 through 1920x1200. IE10 or below is not recommended and no kludges were used. Smartphone users with large screen can use this right panel as an &quot;app&quot; (minimum resolution 360x580). User settings are stored in browser <a href="https://en.wikipedia.org/wiki/LocalStorage#localStorage">localStorage</a>. Google Analytics is used to collect visitor's system/browser/locale information and site usage; you can <a href="https://www.google.com/search?q=block+Google+Analytics">block it</a> if you wish.</p>
+<p>This web application runs entirely on the client's side, except for API calls to the GW2 server for map and game data. Few libraries/plugins were used to avoid bloat. It was tested on Firefox/Chrome 2013-2014 and Opera 2013, in 1024x768 through 1920x1200. IE10 or below is not recommended and no kludges were used. Smartphone users with large screen can use this right panel as an &quot;app&quot; (minimum resolution 360x580). User settings are stored in browser <a href="https://en.wikipedia.org/wiki/LocalStorage#localStorage">localStorage</a>. Google Analytics is used to collect visitor's system/browser/locale information and site usage; you can <a href="https://www.google.com/search?q=block+Google+Analytics">block it</a> if you wish.</p>
 <h2>History</h2>
 <p>The idea of GW2Timer stemmed from the dissatisfaction (pre-megaserver) of GW2Stuff's lack of individual event information. As a former PVE commander, I needed to know what will be the shortest meta event chain to lead the train to. Although GW2Stuff was excellent at telling people when bosses are happening, it did not reveal the hard work (all the pre-events) that more knowledgeable people had to do. GW2Timer uses time statistics of individual events to predict when they will start and finish so players can more effectively manage their playtime.</p>
 <p>2013 December 13 - Inception<br />
@@ -71,7 +71,7 @@
 <a href="http://divinitysreach.com">Divinity's Reach</a> - comprehensive map completioner<br />
 <a href="http://virtus-gilde.de/gw2map">gw2map</a> - path maker and viewer<br />
 <a href="http://howar31.github.io/GW2Timer/">howar31</a> - clean schedule timer<br />
-<a href="http://www.gw2spidy.com">gw2spidy</a> - Trading Post API provider<br />
+<a href="http://www.gw2spidy.com">gw2spidy</a> - Trading Post search provider<br />
 </p>
 
 </section>
